--- a/stylus/require/layouts.styl
+++ b/stylus/require/layouts.styl
@@ -21,6 +21,7 @@
 // Logo size
 .logo
     width 5rem
+    margin 0 1rem
 
 /*
     Secondary header flexboxes
